src/test/resources/org/nest/spl/_cocos/valid/varNotDefinedBeforeUse.simple
module org.nest.spl._cocos.varNotDefinedBeforeUse
x integer
y real = 5 * x
x = 13


for x in 1 ... 10 step 1:
# blaa
end

x = 2

xx real = 2 * x