src/test/resources/org/nest/spl/_cocos/invalid/varNotDefinedBeforeUse.simple
module org.nest.spl._cocos.varNotDefinedBeforeUse
y real = 5 * x

x = 13

for x in 1 ... 10 step 1:
# blaa
end

x = 2

x real = 2 * x